--- a/templates/comunidad_ca.html
+++ b/templates/comunidad_ca.html
@@ -148,7 +148,7 @@
               </div>
               <div class="card-content">
               <div class="content">
-                  <h4>Proyectos aplicados</h4>
+                  <h4>Hágalo usted mismo</h4>
                   <p>En ingeniería existen varios proyectos de fin semestre a aplicados al ramo pero no
                         a la sociedad.</p>
                   <span class="button is-link modal-button" data-target="modal-card7">Detalles</span>
@@ -156,22 +156,6 @@
               </div>
           </div>
       </div>
-      <div class="column is-4">
-          <div class="card is-shady">
-              <div class="card-image">
-              <figure class="image is-4by3">
-                  <img src="../images/comunidad_ca_picture.jpeg" alt="Placeholder image">
-              </figure>
-              </div>
-              <div class="card-content">
-              <div class="content">
-                  <h4>Encuentrate con Chile</h4>
-                  <p>Es parte de nuestra labor como ingenieros el tener presente la realidad de nuestro
-                        país con respecto a los distintos temas de relevancia social.</p>
-                  <span class="button is-link modal-button" data-target="modal-card8">Detalles</span>
-              </div>
-              </div>
-          </div>
       
         
 
