--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -32,7 +32,7 @@
     <!-- Begin Scroll Up Button -->
 
     <form action="#home">
-      <button id="toTop" title="Go to top">
+      <button id="toTop" title="Go to top" href="#body">
         <i class="fas fa-angle-up"></i>
       </button>
     </form>
