--- a/templates/index.html
+++ b/templates/index.html
@@ -208,7 +208,7 @@
                 En él buscamos abarcar los proyectos necesarios para lograr cubrir
                 la mayor parte de los ODS.
               </h2>
-              <form style="margin-bottom: 2rem;" target="_blank" action="https://drive.google.com/open?id=15Ii6c9GeSSH5Dz8efx_CjAIPpVAKg2qK">
+              <form style="margin-bottom: 2rem;" target="_blank" action="https://drive.google.com/file/d/15Ii6c9GeSSH5Dz8efx_CjAIPpVAKg2qK/view">
                 <button class="button">
                   Programa Directiva&emsp;<i class="fad fa-download fa-lg"></i>
                 </button>
