--- a/templates/index.html
+++ b/templates/index.html
@@ -210,7 +210,7 @@
               </h2>
               <form style="margin-bottom: 2rem;" target="_blank" action="https://drive.google.com/file/d/15Ii6c9GeSSH5Dz8efx_CjAIPpVAKg2qK/view">
                 <button class="button">
-                  Programa Directiva&emsp;<i class="fad fa-download fa-lg"></i>
+                  Programa Directiv&emsp;<i class="fad fa-download fa-lg"></i>
                 </button>
               </form>
               <form target="_blank" action="https://drive.google.com/file/d/1ypwLIDivSLIYv6Ju_2RoSwzgNkd8N7YK/view">
