--- a/templates/index.html
+++ b/templates/index.html
@@ -200,7 +200,7 @@
           >
             <div class="column is-12 about-me">
               <h1 class="title has-text-centered section-title">
-                nuestro programa
+                nuestro program
               </h1>
             </div>
             <div class="column is-10 has-text-centered is-offset-1">
