--- a/templates/bienestar_saludmental.html
+++ b/templates/bienestar_saludmental.html
@@ -40,9 +40,8 @@
                 <div class="card-content">
                 <div class="content">
                     <h4>CARE a la práctica</h4>
-                    <p>Actualmente la Escuela se encuentra implementando el programa del CARE,
-                            pero esto no siempre se ve reflejado en lo académico. Existe una divergencia entre las
-                            exigencias de algunos ramos y lo que busca el programa.</p>
+                    <p>Actualmente la Escuela se encuentra implementando el programa del CARE, pero
+                    esto no siempre se ve reflejado en lo academico.</p>
                     <span class="button is-link modal-button" data-target="modal-card1">Detalles</span>
 
                 </div>
@@ -78,8 +77,8 @@
                 <div class="card-content">
                 <div class="content">
                     <h4>Protocolo para situaciones críticas en pruebas</h4>
-                    <p>Desde el testimonio de varios estudiantes, surge la inquietud de no saber cómo
-                            actuar cuando alguien presenta alguna situación crítica. </p>
+                    <p>Desde el testimonio de varios estudiantes, surge la inquietud de no saber cómo actuar
+                    cuando alguien presenta alguna situación crítica durante una evaluación.  </p>
                     <span class="button is-link modal-button" data-target="modal-card3">Detalles</span>
 
                 </div>
@@ -97,7 +96,7 @@
                 </div>
                 <div class="card-content">
                 <div class="content">
-                    <h4>Bienestar es máss que salud mental</h4>
+                    <h4>Bienestar es más que salud mental</h4>
                     <p>La preocupación por la salud mental ya se planteó y se aceptó como un punto
                             importante a trabajar. Aún así, queremos potenciar la idea de que el bienestar
                             va mucho máss allá que eso.</p>
@@ -153,18 +152,40 @@
               </div>
               <div class="card-content">
               <div class="content">
-                  <h4>Manual Ing UC</h4>
-                  <p>Para ayudar a los estudiantes en su paso por la universidad, lanzaremos un manual
-                        digital con tips y recomendaciones sobre la vida universitaria.</p>
+                  <h4>Semana de la Salud Mental</h4>
+                  <p>Se continuará con el desarrollo de actividades para la Semana de la Salud Mental, poniendo énfasis en la visibilización e
+                  importancia de esta, además de llamar a la participación de profesores, estudiantes y
+                  funcionarios.</p>
                 <span class="button is-link modal-button" data-target="modal-card7">Detalles</span>
 
               </div>
               </div>
           </div>
-    
-        
+          <div class="column is-4">
+              <div class="card is-shady">
+                  <div class="card-image">
+                  <figure class="image is-4by3">
+                      <img src="../images/bienestar_picture.jpeg" alt="Placeholder image">
+                  </figure>
+                  </div>
+                  <div class="card-content">
+                  <div class="content">
+                      <h4>Unidad de Bienestar</h4>
+                      <p>Este proyecto a gran escala se trabajará en conjunto con la Consejería Académica,
+                        Dirección de Pregrado y Decanato, porque entendemos que no lograremos cambios de
+                        esta magnitud por nuestra cuenta. Queremos que el bienestar sea una de las prioridades
+                        en nuestra Escuela y que esto se vea reflejado en diversos procesos de pregrado y en los ramos.  </p>
+                              <span class="button is-link modal-button" data-target="modal-card8">Detalles</span>
+
+                  </div>
+                  </div>
+              </div>
+          </div>
+
+
+
     </section>
-    
+
     <!--  ===============
     HERE BE MODALS
     ===============  -->
@@ -186,12 +207,13 @@
               </div>
             </div>
             <div class="content">
-                    Actualmente la Escuela se encuentra implementando el programa del CARE,
-                    pero esto no siempre se ve reflejado en lo académico. Existe una divergencia entre las
-                    exigencias de algunos ramos y lo que busca el programa. Es por esto que pretendemos
-                    trabajar en conjunto con las autoridades para ver cómo continuar con el trabajo del
-                    CARE de forma que se lleve a la práctica y que los profesores estén alineados con
-                    los intereses de Decanato.
+              Actualmente la Escuela se encuentra implementando el programa del CARE, pero
+              esto no siempre se ve reflejado en lo academico. Trabajaremos en conjunto con las
+              autoridades para ver como continuar con el trabajo del CARE de forma que se lleve a la
+              pr ́actica, por medio de catastros realizados con estudiantes y docentes. De esta forma,
+              podremos felicitar a profesores y ayudantes de los ramos mejor calificados e identificar
+              cuales debiesen mejorar. Ası, toda nuestra escuela podra avanzar en conjunto en esta
+              cultura universitaria.
 
               <br>
             </div>
@@ -220,13 +242,15 @@
                 </div>
                 </div>
                 <div class="content">
-                        Queremos volver a impulsar este programa de prevención y reiniciar los ciclos de
-                        capacitaciones de los Pares de Apoyo Universitarios (PAU). Por otra parte, queremos
-                        extender la invitación a estas instancias a profesores y administrativos, además de
-                        los estudiantes. Mientras más personas sepan cómo trabajar estas temáticas, avanzaremos en la prevención y promoción. Queremos potenciar el rol de los PAU para
-                        que no se ocupen únicamente de las crisis de psicológicas, sino que brinden apoyo
-                        constante para prevenir estas crisis. Esto podría verse como una analogía con los
-                        tutores, pero que no solo interactúen con los novatos.
+                  Volveremos a impulsar este programa de prevencion y reiniciar los ciclos de capacitaciones de los
+                  Pares de Apoyo Universitarios (PAU). Por otra parte, queremos extender la invitación a estas instancias
+                  no solo a estudiantes, sino que tambien a profesores y administrativos. Mientras más personas sepan como
+                  trabajar estas temáticas, avanzaremos mejor en su prevención y promoción.
+                  Nuestro objetivo es potenciar el rol de los PAU para que no se ocupen únicamente de las crisis de psicológicas,
+                  sino que brinden apoyo constante para prevenir estas crisis. Esto podría verse como una analogía con los tutores,
+                  pero que no solo interactuen con los novatos. Ademas, estamos trabajando en la reestructuracion del sistema de
+                  capacitaciones implementado anteriormente. Por último, queremos extender la invitación a estas capacitaciones a
+                  los coordinadores de proyectos CAi.
                 <br>
                 </div>
             </div>
@@ -250,10 +274,13 @@
                         </div>
                         </div>
                         <div class="content">
-                                Desde el testimonio de varios estudiantes, surge la inquietud de no saber cómo
-                                actuar cuando alguien presenta alguna situación crítica. Es por esto que resulta
-                                necesario generar un protocolo de acción frente a posibles crisis de pánico, crisis
-                                ansiosas, llantos u otras experiencias que tenga un estudiante rindiendo prueba.
+                          Desde el testimonio de varios estudiantes, surge la inquietud de no saber cómo actuar
+                          cuando alguien presenta alguna situación crítica durante una evaluación. Es por esto
+                          que resulta necesario generar un protocolo de acción frente a posibles crisis de pánico,
+                          crisis ansiosas, llantos u otras experiencias que tenga un estudiante que se encuentra
+                          rindiendo una prueba. Trabajaremos en conjunto con las unidades académicas para que
+                          se implementen respetando las necesidades de cada ramo y reglamentos, pero siempre
+                          velando por el estudiantado.
                         <br>
                         </div>
                     </div>
@@ -277,15 +304,18 @@
                         </div>
                         </div>
                         <div class="content">
-                                La preocupación por la salud mental ya se planteó y se aceptó como un punto
-                                importante a trabajar. Aún así, queremos potenciar la idea de que el bienestar
-                                va mucho más allá que eso. Es por esto que queremos generar instancias en las
-                                que se promueva el autocuidado de la salud por medio de la higiene del sueño, la
-                                alimentación saludable, realización de deporte, la salud sexual, entre otras cosas.
-                                Por último, dar a conocer prácticas respaldadas por la psicología positiva como la
-                                meditación, expresar la gratitud y muchas más. Estas instancias se trabajarán en
-                                conjunto con PES y Salud Estudiantil, y se complementarán con difusiones por medio
-                                de intervenciones en el patio y redes sociales.
+                          La preocupación por la salud mental ya se planteó y se aceptó como un punto importante
+                          a trabajar. Aun así, queremos potenciar la idea de que el bienestar va mucho más allá
+                          que eso. Es por esto que organizaremos diversas instancias en las que se promueva el
+                          autocuidado de la salud por medio de la higiene del sueno, la alimentación saludable,
+                          realización de deporte, entre otras cosas. Estas se realizarán en charlas temáticas,
+                          intervenciones y talleres. También daremos a conocer prácticas respaldadas por la
+                          psicología positiva como la meditación y expresión de la gratitud. Por ultimo, realizaremos
+                          actividades relacionadas con los intereses de nuestra comunidad, tales como una charla
+                          en la que se explique cómo ser un gamer saludable o técnicas de estudio. Estas actividades
+                          se trabajarán en conjunto con PES y Salud Estudiantil, y se complementarán con difusiones
+                          por medio de intervenciones en el patio y redes sociales. Algunas serán independientes y
+                          otra en semanas temáticas.
                         <br>
                         </div>
                     </div>
@@ -341,7 +371,8 @@
                         </div>
                         <div class="content">
                                 Queremos continuar con Bienestar con Huellas, uno de los proyectos que más
-                                rompen la rutina durante días de prueba, al contar con compañía de perros terapeúticos. También crear instancias en las que la comunidad pueda explorar la
+                                rompen la rutina durante días de prueba, al contar con compañía de perros terapeúticos.
+                                También crear instancias en las que la comunidad pueda explorar la
                                 música como método para liberar estrés. Se pueden dar distintas situaciones para
                                 lograr que la gente se relacione en un ambiente de distensión dentro del patio de
                                 ingeniería como yoga, masajes, zumba, entre otras.
@@ -364,14 +395,18 @@
                     <div class="card-content">
                         <div class="media">
                         <div class="media-content">
-                            <p class="title is-4">Manual Ing UC</p>
+                            <p class="title is-4">Semana de la Salud Mental</p>
                         </div>
                         </div>
                         <div class="content">
-                                Para ayudar a los estudiantes en su paso por la universidad, lanzaremos un manual
-                                digital con tips y recomendaciones sobre la vida universitaria. Este incluirá consejos
-                                para todos los estudiantes que vivan solos, abarcando temáticas como, organización
-                                de gastos y del hogar. También dar a conocer todas las facilidades que da la universidad, como el CARA, la SAI, la atención psicológica, entre otras.
+                          Proyecto anteriormente no mencionado en el área de Bienestar y Salud mental, pero
+                          sí por la Consejería Académica de Pregrado Sigma. Se continuará con el desarrollo de
+                          actividades para la Semana de la Salud Mental, poniendo énfasis en la visibilización e
+                          importancia de esta, además de llamar a la participación de profesores, estudiantes y
+                          funcionarios. Esta es un problemática que cada vez toma más relevancia dentro de
+                          nuestras Escuela, ya que no podemos ignorar a nuestros propios companeros, quienes se
+                          enfrentan a distintas problemáticas que, en ocasiones, pueden provocar la pérdida
+                          de sentido en la carrera. Esta actividad se trabajará en conjunto con la Consejería Académica.
                         <br>
                         </div>
                     </div>
@@ -379,10 +414,43 @@
                     <!-- end content -->
         <button class="modal-close is-large" aria-label="close"></button>
     </div>
+    <div id="modal-card8" class="modal modal-fx-3dSlit">
+            <div class="modal-background"></div>
+            <div class="modal-content is-tiny">
+                <!-- content -->
+                <div class="card">
+                <div class="card-image">
+                    <figure class="image is-4by3">
+                    <img src="../images/bienestar_picture.jpeg" alt="Placeholder image">
+                    </figure>
+                </div>
+                <div class="card-content">
+                    <div class="media">
+                    <div class="media-content">
+                        <p class="title is-4">Unidad de Bienestar</p>
+                    </div>
+                    </div>
+                    <div class="content">
+                      Este proyecto a gran escala se trabajará en conjunto con la Consejería Académica,
+                      Dirección de Pregrado y Decanato, porque entendemos que no lograremos cambios de
+                      esta magnitud por nuestra cuenta. Queremos que el bienestar sea una de las prioridades
+                      en nuestra Escuela y que esto se vea reflejado en diversos procesos de pregrado y en
+                      los ramos. Ya iniciamos conversaciones con la Escuela, por lo que está en proceso de
+                      evaluación la implementación en concreto de esta medida. Las opciones que asoman con
+                      mayor fuerza son la creación de una nueva Unidad de Bienestar, o bien un plan transversal
+                      a las direcciones ya existentes de modo que la cultura del CARE pueda llegar de forma
+                      activa al estudiantado en actividades del día a día.
+                    <br>
+                    </div>
+                </div>
+                </div>
+                <!-- end content -->
+    <button class="modal-close is-large" aria-label="close"></button>
+</div>
     </div>
     <script src="https://unpkg.com/bulma-modal-fx/dist/js/modal-fx.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.9.1/js/OverlayScrollbars.min.js'></script>  
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.9.1/js/OverlayScrollbars.min.js'></script>
     <script src="../js/wild.js"></script>
         <script>
         document.addEventListener("DOMContentLoaded", function() {
@@ -390,7 +458,6 @@
         //The second argument has to be at least a empty object or a object with your desired options
         OverlayScrollbars(document.querySelectorAll("body"), { });
         });
-        </script>  
+        </script>
     </body>
     </html>
-    
