--- a/templates/academia.html
+++ b/templates/academia.html
@@ -201,10 +201,7 @@
                 <p>En conjunto con Ikigai se retomará el evento International Seminar for Engineering Leaders desarrollado por
                     Kaizen CAi en 2017. Esta es una instancia para que estudiantes de Ingeniería UC se
                     hagan parte del emprendimiento, innovación y liderazgo, formando redes de calidad a
-                    nivel internacional. Esta nueva versión tendrá el foco de crear un mundo mejor a partir
-                    de un liderazgo responsable y efectivo. De esta manera, identificamos y reuniremos en
-                    nuestro campus a los líderes jóvenes más influyentes a nivel global, que están buscando
-                    en el área de medioambiente, salud, tecnología, educación u otra, hacer un mundo mejor.
+                    nivel internacional.
                     </p>
                 <span class="button is-link modal-button" data-target="modal-card9">Detalles</span>
             </div>
