--- a/templates/academia.html
+++ b/templates/academia.html
@@ -383,6 +383,69 @@
                 </div>
             </div>
         </div>
+        <div style="margin-top: -10rem;" class="columns features">
+            <div class="column is-4">
+                <div class="card is-shady">
+                    <div class="card-image">
+                    <figure class="image is-4by3">
+                        <img src="../images/academia_picture.jpeg" alt="Placeholder image">
+                    </figure>
+                    </div>
+                    <div class="card-content">
+                    <div class="content">
+                        <h4>Transformando ayudantı́as</h4>
+                        <p class="tag is-danger">Academia</p>
+                        <p>Un problema que se presenta para los nuevos ayudantes es saber cómo empezar a
+                            enseñar, por lo que proponemos trabajar con el Cuerpo de Ayudantes para mejorar
+                            la forma en que se hace cátedra hoy en la escuela, mediante el fortalecimiento de
+                            los talleres de capacitación.</p>
+                        <span class="button is-link modal-button" data-target="modal-card16">Detalles</span>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <div class="column is-4">
+                <div class="card is-shady">
+                    <div class="card-image">
+                    <figure class="image is-4by3">
+                        <img src="../images/academia_picture.jpeg" alt="Placeholder image">
+                    </figure>
+                    </div>
+                    <div class="card-content">
+                    <div class="content">
+                        <h4>Consultando mis ramos</h4>
+                        <p class="tag is-danger">Academia</p>
+                        <p>Hoy en dı́a, para saber qué ramos tomar, los estudiantes consultan en el grupo
+                            ”CURSOS UC” sobre los profesores y ramos recomendados. Esta es una plataforma
+                            informal, la cual no está siempre completa con la información que uno busca.</p>
+                        <span class="button is-link modal-button" data-target="modal-card17">Detalles</span>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <div class="column is-4">
+                <div class="card is-shady">
+                    <div class="card-image">
+                    <figure class="image is-4by3">
+                        <img src="../images/academia_picture.jpeg" alt="Placeholder image">
+                    </figure>
+                    </div>
+                    <div class="card-content">
+                    <div class="content">
+                        <h4>Buscacursos a los estudiantes</h4>
+                        <p class="tag is-danger">Academia</p>
+                        <p>Algunos estudiantes sufren estrés a la hora de tomar ramos al no saber si su grupo
+                            de Banner les va a alcanzar para tomar los cursos que desean. Se propone desde
+                            el CAi, establecer una base de datos la cual registre en qué
+                            grupo de banner se acaban los cupos y cuántos de estos avanzan a la siguiente toma.</p>
+                        <span class="button is-link modal-button" data-target="modal-card18">Detalles</span>
+                    </div>
+                    </div>
+                </div>
+            </div>
+
+
+
 
         <div style="margin-top: -10rem;" class="columns features">
             <div class="column is-4">
