--- a/templates/academia.html
+++ b/templates/academia.html
@@ -383,6 +383,7 @@
                 </div>
             </div>
         </div>
+        </div>
         <div style="margin-top: -10rem;" class="columns features">
             <div class="column is-4">
                 <div class="card is-shady">
@@ -441,8 +442,6 @@
                 </div>
             </div>
         </div>
-
-        
     </section>
     
     <!--  ===============
