--- a/templates/arte_cultura.html
+++ b/templates/arte_cultura.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="card-content">
                 <div class="content">
-                    <h4>Dancing with the CAi</h4>
+                    <h4>DancING</h4>
                     <p>Siguiendo la misma idea de Dancing with the stars, traemos de vuelta una propuesta que consta de una competencia de baile en pareja, con un tema designado,
                             existirán clasificatorias y finales. </p>
                             <span class="button is-link modal-button" data-target="modal-card1">Detalles</span>
@@ -151,8 +151,57 @@
               </div>
               </div>
           </div>
-    
-        
+        <div class="column is-4">
+          <div class="card is-shady">
+              <div class="card-image">
+              <figure class="image is-4by3">
+                  <img src="../images/cultura_picture.jpg" alt="Placeholder image">
+              </figure>
+              </div>
+              <div class="card-content">
+              <div class="content">
+                  <h4>Ciclo de Documentales</h4>
+                  <p>Durante el ano realizaremos distintos ciclos de documentales que permitan acercarnos
+                    más a un mejor entendimiento de la crisis climática y de los ecosistemas que vivimos hoy
+                    en día. </p>
+                    <span class="button is-link modal-button" data-target="modal-card3">Detalles</span>
+              </div>
+              </div>
+          </div>
+          <div class="column is-4">
+            <div class="card is-shady">
+                <div class="card-image">
+                <figure class="image is-4by3">
+                    <img src="../images/cultura_picture.jpg" alt="Placeholder image">
+                </figure>
+                </div>
+                <div class="card-content">
+                <div class="content">
+                    <h4>Mis 100 palabras</h4>
+                    <p>Siguiendo el clásico estilo de los escritos en 100 palabras, proponemos este concurso
+                        donde todo participante tendrá la opción de contar su historia en 100 palabras.</p>
+                      <span class="button is-link modal-button" data-target="modal-card4">Detalles</span>
+                </div>
+                </div>
+            </div>
+    <div style="margin-top: -10rem;" class="columns features">
+      <div class="column is-4">
+          <div class="card is-shady">
+              <div class="card-image">
+              <figure class="image is-4by3">
+                  <img src="../images/cultura_picture.jpg" alt="Placeholder image">
+              </figure>
+              </div>
+              <div class="card-content">
+              <div class="content">
+                  <h4>Guerra de bandas interfacultad</h4>
+                  <p>A modo de promover el arte musical, les traemos la batalla final entre los y las
+                    mejores musicos UC.</p>
+                    <span class="button is-link modal-button" data-target="modal-card5">Detalles</span>
+
+              </div>
+              </div>
+          </div>
     </section>
     
     <!--  ===============
@@ -221,37 +270,6 @@
     </div>
     <!-- end tiny modal card -->
     <!-- Image modal -->
-    <div id="modal-card2" class="modal modal-fx-3dSlit">
-        <div class="modal-background"></div>
-        <div class="modal-content is-tiny">
-            <!-- content -->
-            <div class="card">
-            <div class="card-image">
-                <figure class="image is-4by3">
-                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
-                </figure>
-            </div>
-            <div class="card-content">
-                <div class="media">
-                <div class="media-content">
-                    <p class="title is-4">Postulación acompañada</p>
-                    <p class="tag is-primary">Emprendimiento</p>
-                </div>
-                </div>
-                <div class="content">
-                    Una vez elegido el fondo al que postular, los emprendedores se encuentran con un
-                    nuevo desafı́o: la inscripción. El formulario de postulación a estos fondos suele ser
-                    largo, detallado, técnico y engorroso. Es por esto que como CAi queremos acompañar
-                    a nuestros compañeros emprendedores proveyéndolos de asesorı́as o mentoring para
-                    el proceso de postulación a fondos, conectandolos con la dirección de innovación.
-                <br>
-                </div>
-            </div>
-            </div>
-            <!-- end content -->
-        </div>
-        <button class="modal-close is-large" aria-label="close"></button>
-    </div>
     <div id="modal-card3" class="modal modal-fx-3dSlit">
         <div class="modal-background"></div>
         <div class="modal-content is-tiny">
@@ -265,16 +283,16 @@
             <div class="card-content">
                 <div class="media">
                 <div class="media-content">
-                    <p class="title is-4">Postulación acompañada</p>
-                    <p class="tag is-primary">Emprendimiento</p>
+                    <p class="title is-4">Ciclo de Documentales</p>
                 </div>
                 </div>
                 <div class="content">
-                    Una vez elegido el fondo al que postular, los emprendedores se encuentran con un
-                    nuevo desafı́o: la inscripción. El formulario de postulación a estos fondos suele ser
-                    largo, detallado, técnico y engorroso. Es por esto que como CAi queremos acompañar
-                    a nuestros compañeros emprendedores proveyéndolos de asesorı́as o mentoring para
-                    el proceso de postulación a fondos, conectandolos con la dirección de innovación.
+                    Durante el ano realizaremos distintos ciclos de documentales que permitan acercarnos 
+mas a un mejor entendimiento de la crisis climática y de los ecosistemas que vivimos hoy
+en día; abordando tem´aticas como alimentación, crisis hídrica, acidificación de oceano,
+pérdida de fauna, entre otros. Prefiriendo además un enfoque local que permita al
+espectador entender el problema tanto de forma global como nacional. La cartelera se
+incluirá en el newsletter.
                 <br>
                 </div>
             </div>
@@ -296,16 +314,42 @@
             <div class="card-content">
                 <div class="media">
                 <div class="media-content">
-                    <p class="title is-4">Apoyo especifı́co</p>
-                    <p class="tag is-primary">Emprendimiento</p>
+                    <p class="title is-4">Mis 100 palabras</p>
                 </div>
                 </div>
                 <div class="content">
-                    Algunas veces un emprendimiento aún es sólamente una idea. Otras veces nece-
-                    sita apoyo en un aspecto especı́fico del proceso de diseño para surgir, como el pro-
-                    totipo, modelo de negocios, patente, etc. Como CAi queremos ser el nexo entre
-                    ese emprendedor y el contacto o profesor especialista que necesita para poder seguir
-                    avanzando en su proyecto.
+                    Siguiendo el clásico estilo de los escritos en 100 palabras, proponemos este concurso
+donde todo participante tendrá la opción de contar su historia en 100 palabras. El primer
+semestre será con temática libre, y el segundo será relacionada a la rememoración del
+18/O.
+                <br>
+                </div>
+            </div>
+            </div>
+            <!-- end content -->
+        </div>
+        <button class="modal-close is-large" aria-label="close"></button>
+    </div>
+    <div id="modal-card5" class="modal modal-fx-3Slit">
+        <div class="modal-background"></div>
+        <div class="modal-content is-tiny">
+            <!-- content -->
+            <div class="card">
+            <div class="card-image">
+                <figure class="image is-4by3">
+                <img src="../images/cultura_picture.jpg" alt="Placeholder image">
+                </figure>
+            </div>
+            <div class="card-content">
+                <div class="media">
+                <div class="media-content">
+                    <p class="title is-4">Guerra de bandas interfacultad</p>
+                </div>
+                </div>
+                <div class="content">
+                    A modo de promover el arte musical, les traemos la batalla final entre los y las
+mejores musicos UC. En este evento se enfrentarán estudiantes y docentes de las distintas
+facultades que les interese participar, donde solo existirá un ganador.
                 <br>
                 </div>
             </div>
