--- a/templates/arte_cultura.html
+++ b/templates/arte_cultura.html
@@ -221,7 +221,7 @@
           <div class="card-content">
             <div class="media">
               <div class="media-content">
-                <p class="title is-4">Dancing with the CAi</p>
+                <p class="title is-4">DancING</p>
               </div>
             </div>
             <div class="content">
