--- a/templates/arte_cultura.html
+++ b/templates/arte_cultura.html
@@ -151,6 +151,7 @@
               </div>
               </div>
           </div>
+        </div>
         <div class="column is-4">
           <div class="card is-shady">
               <div class="card-image">
@@ -168,6 +169,7 @@
               </div>
               </div>
           </div>
+        </div>
           <div class="column is-4">
             <div class="card is-shady">
                 <div class="card-image">
@@ -184,6 +186,8 @@
                 </div>
                 </div>
             </div>
+          </div>
+    </div>
     <div style="margin-top: -10rem;" class="columns features">
       <div class="column is-4">
           <div class="card is-shady">
